@@ -44,13 +44,15 @@ public:
 };
 
 //------------------------------------------------------------------------
-class UIDescriptionTestController : public UIDescriptionBaseController
+class UIDescriptionTestController : public UIDescriptionBaseController, public VST3EditorDelegate
 {
 public:
 	UIDescriptionTestController ();
 	
 	Steinberg::tresult PLUGIN_API initialize (Steinberg::FUnknown* context);
 	Steinberg::IPlugView* PLUGIN_API createView (Steinberg::FIDString name);
+
+	IController* createSubController (const char* name, IUIDescription* description, VST3Editor* editor);
 
 	static Steinberg::FUnknown* createInstance (void*) { return (Steinberg::Vst::IEditController*)new UIDescriptionTestController; }
 	static Steinberg::FUID cid;
